tests/ui/associated-type-bounds/return-type-notation/bad-inputs-and-output.stderr
error[E0575]: expected associated type, found associated function `Trait::method`
  --> $DIR/bad-inputs-and-output.rs:27:36
   |
LL | fn foo_qualified<T: Trait>() where <T as Trait>::method(i32): Send {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not a associated type

error[E0575]: expected associated type, found associated function `Trait::method`
  --> $DIR/bad-inputs-and-output.rs:30:36
   |
LL | fn bar_qualified<T: Trait>() where <T as Trait>::method() -> (): Send {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a associated type

error[E0575]: expected associated type, found associated function `Trait::method`
  --> $DIR/bad-inputs-and-output.rs:33:36
   |
LL | fn baz_qualified<T: Trait>() where <T as Trait>::method(): Send {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^ not a associated type

error: argument types not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:9:23
   |
LL | fn foo<T: Trait<method(i32): Send>>() {}
   |                       ^^^^^ help: remove the input types: `()`

error: return type not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:12:25
   |
LL | fn bar<T: Trait<method() -> (): Send>>() {}
   |                         ^^^^^^ help: remove the return type

error: return type notation arguments must be elided with `..`
  --> $DIR/bad-inputs-and-output.rs:15:23
   |
LL | fn baz<T: Trait<method(): Send>>() {}
   |                       ^^ help: add `..`: `(..)`

error: argument types not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:18:40
   |
LL | fn foo_path<T: Trait>() where T::method(i32): Send {}
   |                                        ^^^^^ help: remove the input types: `()`

error: return type not allowed with return type notation
  --> $DIR/bad-inputs-and-output.rs:21:42
   |
LL | fn bar_path<T: Trait>() where T::method() -> (): Send {}
   |                                          ^^^^^^ help: remove the return type

error: return type notation arguments must be elided with `..`
  --> $DIR/bad-inputs-and-output.rs:24:40
   |
LL | fn baz_path<T: Trait>() where T::method(): Send {}
   |                                        ^^ help: add `..`: `(..)`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0575`.
